--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <style>
-            form {{
+            form {
                 background-color: #eee;
                 padding: 20px;
                 margin: 0 auto;
                 width: 540px;
                 font: 16px sans-serif;
                 border-radius: 10px;
-            }}
+            }
 
         </style>
     </head>
