--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <body>
+{% extends "index.html" %}
         
         {% for password in password %}
             {% if orig_password == verify_password %}
@@ -9,7 +7,4 @@
                 <p>Passwords must match!</p>
             {% endif %}
             {% endfor %}
-        
-       
-    </body>
-</html>
+            
