commit new changes to templates

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
         
         {% for password in password %}
             {% if orig_password=verify_password %}
