--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -32,3 +35,5 @@
     </form>
     </body>
 </html>
+
+{% endblock %}
