--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!DOCTYPE html>
+
 <html>
     <head>
         <style>
@@ -31,6 +31,7 @@
         
             
         </label>
+        <p class="error">{{password_error}}</p>
         <input type="submit"/>
     </form>
     </body>
